--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "inquirer": "^8.2.4",
+    "fs": "^0.0.1-security",
+    "inquirer": "^8.2.6",
     "jest": "^29.4.3"
   },
   "keywords": [],
