--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
-    "inquirer": "^8.2.6",
-    "jest": "^29.4.3"
+    "inquirer": "^8.2.6"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
